Allow git, hg and svn plugins to detect working copy root

BUG: 430024