git/fileviewgitplugin.h
@@ -44,6 +44,7 @@ public:
     FileViewGitPlugin(QObject* parent, const QList<QVariant>& args);
     ~FileViewGitPlugin() override;
     QString fileName() const override;
+    QString localRepositoryRoot(const QString& directory) const override;
     bool beginRetrieval(const QString& directory) override;
     void endRetrieval() override;
     ItemVersion itemVersion(const KFileItem& item) const override;
