svn/fileviewsvnplugin.h
@@ -39,6 +39,7 @@ public:
     FileViewSvnPlugin(QObject* parent, const QList<QVariant>& args);
     ~FileViewSvnPlugin() override;
     QString fileName() const override;
+    QString localRepositoryRoot(const QString& directory) const override;
     bool beginRetrieval(const QString& directory) override;
     void endRetrieval() override;
     ItemVersion itemVersion(const KFileItem& item) const override;
